// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note component renders a .Note by default 1`] = `
<div
  className="NoteItem"
>
  <div
    className="NoteDetails"
  >
    <h3
      className="NoteName"
    >
      <Link
        to="/notes/undefined"
      />
    </h3>
    <p
      className="NoteModified"
    >
      Modified on: 
    </p>
  </div>
  <div
    className="NoteButton-Area"
  >
    <Link
      to="/edit-note/undefined"
    >
      Edit
    </Link>
    <button
      className="NoteButton-Delete"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;

exports[`Note component renders the Note given props 1`] = `
<div
  className="NoteItem"
>
  <div
    className="NoteDetails"
  >
    <h3
      className="NoteName"
    >
      <Link
        to="/notes/a"
      />
    </h3>
    <p
      className="NoteModified"
    >
      Modified on: 
      <Component />
    </p>
  </div>
  <div
    className="NoteButton-Area"
  >
    <Link
      to="/edit-note/a"
    >
      Edit
    </Link>
    <button
      className="NoteButton-Delete"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;
